# Geowars

./: CMakeLists.txt  README.md
doc/: main.org
src/: main.cpp
